# advent-of-code

./: .gitignore  new.py  setup.cfg
.github/workflows/: python-app.yml
2022/: .coverage  day-01.py  day-02.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  pyproject.toml  requirements_dev.txt  setup.cfg
2022/src/aoc2022/: __init__.py  day01.py  day02.py  day04.py  day05.py  day06.py  day08.py  day10.py  day12.py  day14.py  day15.py  day16.py  day17.py
2022/src/aoc2022.egg-info/: PKG-INFO  SOURCES.txt
2022/tests/: test_aoc.py
rs2024/: Cargo.toml
rs2024/src/: main.rs
rs2024/src/puzzles/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs
