[metadata]
name = aoc2022
description = Advent of Code 2022
author = Aleksander Stangeland

[options]
packages =
    aoc2022
install_requires =
    advent-of-code-data>=2.0
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=4.0
    mypy>=1.4
    flake8>=6.0
